# nure-caar-project

./: .env  .gitignore  README.md  postgres-language-server.jsonc
backend/: .env  Cargo.toml
backend/migrations/: Cargo.toml
backend/migrations/src/: lib.rs  m20251118_122736_create_user_table.rs  m20251118_122738_create_reservoir_table.rs  m20251118_122741_create_device_table.rs  m20251118_122744_create_measurement_table.rs  m20251118_122747_create_alerts_tables.rs
backend/server/: Cargo.toml
backend/server/src/: config.rs  error.rs  lib.rs  main.rs  state.rs
backend/server/src/controllers/: admin.rs  alert.rs  auth.rs  device.rs  health.rs  hello_world.rs  measurement.rs  mod.rs  reservoir.rs
backend/server/src/extractors/: api_key.rs  auth.rs  mod.rs
backend/server/src/models/: alert.rs  audit.rs  device.rs  measurement.rs  mod.rs  reservoir.rs  system.rs  user.rs
backend/server/src/models/entities/: alert.rs  alert_rule.rs  audit_log.rs  device.rs  measurement.rs  mod.rs  prelude.rs  reservoir.rs  schema_migrations.rs  sea_orm_active_enums.rs  system_settings.rs  user.rs
backend/server/src/services/: notification.rs
backend/server/src/utils/: fns.rs  jwt.rs  mod.rs
backend/server/src/views/: admin.rs  alert.rs  auth.rs  device.rs  measurement.rs  mod.rs  reservoir.rs
db/: schema.sql
db/migrations/: 20251203144947_init_types_and_functions.sql  20251203144950_create_users_table.sql  20251203144954_create_system_settings.sql  20251203144957_create_reservoirs_table.sql  20251203145000_create_devices_table.sql  20251203145003_create_measurements_table.sql  20251203145007_create_alerts_tables.sql  20251203145010_setup_audit_logging.sql  20251205110540_add_ban_fields_to_user.sql
