[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.7"
dotenvy = "0.15.7"
env_logger = "0.11.8"
migrations = { path = "../migrations" }
sea-orm = { version = "1.1.19", features = [ "sqlx-postgres", "runtime-tokio-rustls", "macros" ] }
tokio = { version = "1.47.2", features = ["macros", "rt-multi-thread"] }
utoipa = "5.4.0"
utoipa-axum = "0.2.0"
utoipa-scalar = { version = "0.3.0", features = ["axum"]}
