[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.7", features = ["macros"]}
chrono = "0.4"
dotenvy = "0.15.7"
env_logger = "0.11.8"
sea-orm = { version = "1.1.19", features = [ "sqlx-postgres", "runtime-tokio-rustls", "macros" ] }
serde = { version = "1.0", features = ["derive"]}
tokio = { version = "1.47.2", features = ["macros", "rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
utoipa = { version = "5.4.0", features = ["chrono", "axum_extras"]}
utoipa-axum = "0.2.0"
utoipa-scalar = { version = "0.3.0", features = ["axum"]}
